tests/baselines/reference/extendBaseClassBeforeItsDeclared.errors.txt
tests/cases/compiler/extendBaseClassBeforeItsDeclared.ts(1,23): error TS2449: Class 'base' used before its declaration.


==== tests/cases/compiler/extendBaseClassBeforeItsDeclared.ts (1 errors) ====
    class derived extends base { }
                          ~~~~
!!! error TS2449: Class 'base' used before its declaration.
!!! (i) tests/cases/compiler/extendBaseClassBeforeItsDeclared.ts(3,7): error TS2728: 'base' was declared here.
     
    class base { constructor (public n: number) { } }